--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                     <li class="nav-item">@Html.ActionLink("Início", "Index", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Sobre", "About", "Home", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Contato", "Contact", "Home", new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Cadastrar", "Create", "Cadastrars", new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
