--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,10 +17,10 @@
             </button>
             <div class="navbar-collapse collapse">
                 <ul class="navbar-nav">
-                    <li class="nav-item">@Html.ActionLink("Início", "Index", "Home", new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Sobre", "About", "Home", new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Contato", "Contact", "Home", new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Cadastrar", "Create", "Cadastrars", new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Início", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Sobre", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Contato", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Cadastrar", "Create", "Cadastrars", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
