--- a/Views/Usuarios/Delete.cshtml
+++ b/Views/Usuarios/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model _30Code.Models.Cadastrar
+﻿@model _30Code.Models.Usuario
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Cadastrar</h4>
+    <h4>Usuario</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,10 +43,33 @@
             @Html.DisplayFor(model => model.Celular)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Nascimento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Nascimento)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TiposUsuarios)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TiposUsuarios)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sexos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sexos)
+        </dd>
+
     </dl>
 
-    @using (Html.BeginForm())
-    {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
