--- a/Views/Usuarios/Details.cshtml
+++ b/Views/Usuarios/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model _30Code.Models.Cadastrar
+﻿@model _30Code.Models.Usuario
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Cadastrar</h4>
+    <h4>Usuario</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -40,6 +40,30 @@
 
         <dd>
             @Html.DisplayFor(model => model.Celular)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Nascimento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Nascimento)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TiposUsuarios)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TiposUsuarios)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sexos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sexos)
         </dd>
 
     </dl>
