--- a/Views/Usuarios/Edit.cshtml
+++ b/Views/Usuarios/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model _30Code.Models.Cadastrar
+﻿@model _30Code.Models.Usuario
 
 @{
     ViewBag.Title = "Edit";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Cadastrar</h4>
+        <h4>Usuario</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -46,6 +46,30 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Celular, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Celular, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nascimento, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Nascimento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nascimento, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.TiposUsuarios, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.TiposUsuarios, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TiposUsuarios, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Sexos, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Sexos, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Sexos, "", new { @class = "text-danger" })
             </div>
         </div>
 
