--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,30 +2,53 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+
+    <img src="~/Images/1.jpg" class="container" alt="#" />
+
+    <div class="jumbotron col-md-12 mt-5">
+        <h2 class="text-center">Nome do curso</h2>
+
+        <img src="~/Images/IMG_20181110_093357.jpg" class="container col-md-3" />
+
+        <img src="~/Icons/direita.png" class="col-md-1" />
+
+        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+
+        <img src="~/Icons/direita.png" class="col-md-1" />
+
+        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+
+        <p class="col-md-12 text-center">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+            of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+            into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    <div class="jumbotron col-md-12">
+        <h2 class="text-center">Nome do curso</h2>
+
+        <img src="~/Images/IMG_20181110_093357.jpg" class="container col-md-3" />
+
+        <img src="~/Icons/direita.png" class="col-md-1" />
+
+        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+
+        <img src="~/Icons/direita.png" class="col-md-1" />
+
+        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+
+        <p class="col-md-12 text-center">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+            of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+            into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+            PageMaker including versions of Lorem Ipsum.
+        </p>
     </div>
 </div>
