Mudança de layout em algumas view e atualização da view Aula

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,54 +1,54 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@{ ViewBag.Title = "Home Page"; }
+<div class="container">
 
-<div class="row">
+    <div class="row">
 
-    <img src="~/Images/1.jpg" class="container" alt="#" />
+        <img src="~/Images/1.jpg" class="container" alt="#" />
 
-    <div class="jumbotron col-md-12 mt-5">
-        <h2 class="text-center">Nome do curso</h2>
+        <div class="jumbotron col-md-12 mt-5">
+            <h2 class="text-center">Nome do curso</h2>
 
-        <img src="~/Images/IMG_20181110_093357.jpg" class="container col-md-3" />
+            <img src="~/Images/IMG_20181110_093357.jpg" class="container col-md-3" />
 
-        <img src="~/Icons/direita.png" class="col-md-1" />
+            <img src="~/Icons/direita.png" class="col-md-1" />
 
-        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+            <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
 
-        <img src="~/Icons/direita.png" class="col-md-1" />
+            <img src="~/Icons/direita.png" class="col-md-1" />
 
-        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+            <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
 
-        <p class="col-md-12 text-center">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-            of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-            into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
-        </p>
-    </div>
+            <p class="col-md-12 text-center">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+                PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div>
 
-    <div class="jumbotron col-md-12">
-        <h2 class="text-center">Nome do curso</h2>
+        <div class="jumbotron col-md-12">
+            <h2 class="text-center">Nome do curso</h2>
 
-        <img src="~/Images/IMG_20181110_093357.jpg" class="container col-md-3" />
+            <img src="~/Images/IMG_20181110_093357.jpg" class="container col-md-3" />
 
-        <img src="~/Icons/direita.png" class="col-md-1" />
+            <img src="~/Icons/direita.png" class="col-md-1" />
 
-        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+            <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
 
-        <img src="~/Icons/direita.png" class="col-md-1" />
+            <img src="~/Icons/direita.png" class="col-md-1" />
 
-        <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
+            <img src="~/Images/IMG_20181110_093357.jpg" class="col-md-3" />
 
-        <p class="col-md-12 text-center">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-            of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-            into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
-        </p>
+            <p class="col-md-12 text-center">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
+                PageMaker including versions of Lorem Ipsum.
+            </p>
+        </div>
     </div>
 </div>
