--- a/Views/Usuarios/Historico.cshtml
+++ b/Views/Usuarios/Historico.cshtml
@@ -1,7 +1,7 @@
-﻿
-@{
-    ViewBag.Title = "Historico";
-}
+﻿<div class="container">
 
-<h2>Historico</h2>
+    @{ ViewBag.Title = "Historico"; }
 
+    <h2>Historico</h2>
+
+</div>
