--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -1,84 +1,305 @@
-﻿
+﻿@model _30Code.Models.Curso
+
 @{
     ViewBag.Title = "Aula";
 }
-<br />
-<h4>Curso (x) - Aula 01</h4>
+<style>
+    body {
+        background: #fafafa;
+    }
 
-<div class="row">
-    <div class="col-9">
-        <video width="800" height="400" controls>
-            <source src="movie.mp4" type="video/mp4">
-        </video>
-    </div>
-    <div class="col-lg-3 col-sm-12">
-        <div style="overflow:scroll;height:400px;width:100%;overflow:auto;border-style:outset">
+    a,
+    a:hover,
+    a:focus {
+        color: inherit;
+        text-decoration: none;
+        transition: all 0.3s;
+    }
 
-             
-            <table border="0" class="my-table">
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box</i></a> Dia 1<a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
+    .line {
+        width: 100%;
+        height: 1px;
+        border-bottom: 1px dashed #ddd;
+        margin: 40px 0;
+    }
 
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box</i></a> Dia 2<a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
+    /* ---------------------------------------------------
+            SIDEBAR STYLE
+        ----------------------------------------------------- */
 
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 3<a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
+    .wrapper {
+        display: flex;
+        width: 100%;
+        align-items: stretch;
+    }
 
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 4 <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 5 <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 6 <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 7  <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 8 <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG " class="float-right" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 9 <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a class="btn-floating btn-large pulse"><i class="material-icons">check_box_outline_blank</i></a> Dia 10 <a class="btn-floating btn-small blue darken-4"><img src="~/Images/icon-plus.PNG" class="float-right" /></a>
-                    </td>
-                </tr>
-            </table>
+    #sidebar {
+        min-width: 250px;
+        max-width: 250px;
+        background: #7386D5;
+        color: #fff;
+        transition: all 0.3s;
+    }
+
+        #sidebar.active {
+            margin-left: -250px;
+        }
+
+        #sidebar .sidebar-header {
+            padding: 20px;
+            background: #6d7fcc;
+        }
+
+        #sidebar ul.components {
+            padding: 20px 0;
+            border-bottom: 1px solid #47748b;
+        }
+
+        #sidebar ul p {
+            color: #fff;
+            padding: 10px;
+        }
+
+        #sidebar ul li a {
+            padding: 10px;
+            font-size: 1.1em;
+            display: block;
+        }
+
+            #sidebar ul li a:hover {
+                color: #7386D5;
+                background: #fff;
+            }
+
+        #sidebar ul li.active > a,
+        a[aria-expanded="true"] {
+            color: #fff;
+            background: #6d7fcc;
+        }
+
+    a[data-toggle="collapse"] {
+        position: relative;
+    }
+
+    #sidebar .dropdown-toggle::after {
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+    }
+
+    ul ul a {
+        font-size: 0.9em !important;
+        padding-left: 30px !important;
+        background: #6d7fcc;
+    }
+
+    ul.CTAs {
+        padding: 20px;
+    }
+
+        ul.CTAs a {
+            text-align: center;
+            font-size: 0.9em !important;
+            display: block;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
+
+    a.download {
+        background: #fff;
+        color: #7386D5;
+    }
+
+    a.article,
+    a.article:hover {
+        background: #6d7fcc !important;
+        color: #fff !important;
+    }
+
+    /* ---------------------------------------------------
+            CONTENT STYLE
+        ----------------------------------------------------- */
+
+    #content {
+        width: 100%;
+        padding: 20px;
+        min-height: 100vh;
+        transition: all 0.3s;
+    }
+
+    /* ---------------------------------------------------
+            MEDIAQUERIES
+        ----------------------------------------------------- */
+
+    @@media (max-width: 768px) {
+        #sidebar {
+            margin-left: -250px;
+        }
+
+            #sidebar.active {
+                margin-left: 0;
+            }
+
+        #sidebarCollapse span {
+            display: none;
+        }
+    }
+</style>
+
+<!-- Font Awesome JS -->
+<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+
+<div class="wrapper">
+    <!-- Sidebar  -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Bootstrap Sidebar</h3>
         </div>
+        <div style="overflow:scroll;height:1000px;width:100%;overflow:auto;">
 
-        <h5>
-        </h5>
+            <ul class="list-unstyled components">
+                <p>Dummy Heading</p>
+                <li class="active">
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 1 - LP</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                        <li>
+                            <a href="#">Apostila</a>
+                        </li>
+                        <li>
+                            <a href="#">Video Aula</a>
+                        </li>
+                        <li>
+                            <a href="#">Exercicios</a>
+                        </li>
+                        <li>
+                            <a href="#">Avaliação diaria</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#pageSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 2 - Variaveis</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu1">
+                        <li>
+                            <a href="#">Apostila</a>
+                        </li>
+                        <li>
+                            <a href="#">Video Aula</a>
+                        </li>
+                        <li>
+                            <a href="#">Exercicios</a>
+                        </li>
+                        <li>
+                            <a href="#">Avaliação diaria</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 3 - Strings</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu2">
+                        <li>
+                            <a href="#">Apostila</a>
+                        </li>
+                        <li>
+                            <a href="#">Video Aula</a>
+                        </li>
+                        <li>
+                            <a href="#">Exercicios</a>
+                        </li>
+                        <li>
+                            <a href="#">Avaliação diaria</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#pageSubmenu3" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 4 - POO</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu3">
+                        <li>
+                            <a href="#">Apostila</a>
+                        </li>
+                        <li>
+                            <a href="#">Video Aula</a>
+                        </li>
+                        <li>
+                            <a href="#">Exercicios</a>
+                        </li>
+                        <li>
+                            <a href="#">Avaliação diaria</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#pageSubmenu4" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Dia 5 - Instanciação</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu4">
+                        <li>
+                            <a href="#">Apostila</a>
+                        </li>
+                        <li>
+                            <a href="#">Video Aula</a>
+                        </li>
+                        <li>
+                            <a href="#">Exercicios</a>
+                        </li>
+                        <li>
+                            <a href="#">Avaliação diaria</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="list-unstyled CTAs">
+                <li>
+                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
+                </li>
+                <li>
+                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Page Content  -->
+    <div id="content">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Conteúdo</span>
+                </button>
+            </div>
+        </nav>
+
+        <h2>Collapsible Sidebar Using Bootstrap 4</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <div class="line"></div>
+
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <div class="line"></div>
+
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <div class="line"></div>
+
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-</div> <!-- IMPORT DE MATERIALIZECESS-->
-<environment include="Development">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</environment>
+</div>
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
- 
+<!-- jQuery CDN - Slim version (=without AJAX) -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').toggleClass('active');
+        });
+    });
+</script>
