--- a/Views/Cursoes/Details.cshtml
+++ b/Views/Cursoes/Details.cshtml
@@ -1,50 +1,51 @@
 ﻿@model _30Code.Models.Curso
 
-@{
-    ViewBag.Title = "Details";
-}
+@{ ViewBag.Title = "Details"; }
 
-<h2>Details</h2>
+<div class="container">
 
-<div>
-    <h4>Curso</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+    <h2>Details</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+    <div>
+        <h4>Curso</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Duracao)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Duracao)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Duracao)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Url_imagem)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Duracao)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Url_imagem)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Url_imagem)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Niveis)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Url_imagem)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Niveis)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Niveis)
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.Niveis)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
