--- a/Views/Moduloes/Details.cshtml
+++ b/Views/Moduloes/Details.cshtml
@@ -1,34 +1,34 @@
 ﻿@model _30Code.Models.Modulo
+<div class="container">
 
-@{
-    ViewBag.Title = "Details";
-}
+    @{ ViewBag.Title = "Details"; }
 
-<h2>Details</h2>
+    <h2>Details</h2>
 
-<div>
-    <h4>Modulo</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Curso.Nome)
-        </dt>
+    <div>
+        <h4>Modulo</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Curso.Nome)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Curso.Nome)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Curso.Nome)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Titulo)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Titulo)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Titulo)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Titulo)
+            </dd>
 
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
