--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,10 +72,10 @@
 
 
 
-    <div class="container body-content">
+    <div class="">
         @RenderBody()
+        <footer class="container">
         <hr />
-        <footer>
             <p>&copy; @DateTime.Now.Year - Meu Aplicativo ASP.NET</p>
         </footer>
     </div>
