--- a/Views/Usuarios/Delete.cshtml
+++ b/Views/Usuarios/Delete.cshtml
@@ -1,80 +1,80 @@
 ﻿@model _30Code.Models.Usuario
+<div class="container">
 
-@{
-    ViewBag.Title = "Delete";
-}
+    @{ ViewBag.Title = "Delete"; }
 
-<h2>Delete</h2>
+    <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Usuario</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Usuario</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Senha)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Senha)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Senha)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Senha)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Celular)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Celular)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Celular)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Celular)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Nascimento)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Nascimento)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nascimento)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Nascimento)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TiposUsuarios)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.TiposUsuarios)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.TiposUsuarios)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.TiposUsuarios)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Sexos)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Sexos)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Sexos)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Sexos)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+@Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>}
+    </div>
 </div>
