--- a/Views/Usuarios/Details.cshtml
+++ b/Views/Usuarios/Details.cshtml
@@ -1,74 +1,75 @@
 ﻿@model _30Code.Models.Usuario
 
-@{
-    ViewBag.Title = "Details";
-}
+<div class="container">
 
-<h2>Details</h2>
+    @{ ViewBag.Title = "Details"; }
 
-<div>
-    <h4>Usuario</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+    <h2>Details</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+    <div>
+        <h4>Usuario</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Nome)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Nome)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Email)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Senha)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Senha)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Senha)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Celular)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Senha)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Celular)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Celular)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Nascimento)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Celular)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nascimento)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Nascimento)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TiposUsuarios)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Nascimento)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.TiposUsuarios)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.TiposUsuarios)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Sexos)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.TiposUsuarios)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Sexos)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Sexos)
+            </dt>
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.Sexos)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
