Adaptação na tela inicial

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -159,7 +159,7 @@
                         <div class="count-box">
                             <i class="icofont-simple-smile" style="color: #20b38e;"></i>
                             <span data-toggle="counter-up">232</span>
-                            <p>Happy Clients</p>
+                            <p>Clientes satisfeitos</p>
                         </div>
                     </div>
 
@@ -167,7 +167,7 @@
                         <div class="count-box">
                             <i class="icofont-document-folder" style="color: #c042ff;"></i>
                             <span data-toggle="counter-up">521</span>
-                            <p>Projects</p>
+                            <p>Cursos</p>
                         </div>
                     </div>
 
@@ -175,15 +175,15 @@
                         <div class="count-box">
                             <i class="icofont-live-support" style="color: #46d1ff;"></i>
                             <span data-toggle="counter-up">1,463</span>
-                            <p>Hours Of Support</p>
+                            <p>Horas de estudos</p>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6 text-center" data-aos="fade-up" data-aos-delay="600">
                         <div class="count-box">
                             <i class="icofont-users-alt-5" style="color: #ffb459;"></i>
-                            <span data-toggle="counter-up">15</span>
-                            <p>Hard Workers</p>
+                            <span data-toggle="counter-up">100</span>
+                            <p>Estudantes empenhados</p>
                         </div>
                     </div>
 
@@ -240,16 +240,17 @@
 
                 <div class="section-title">
                     <h2>Nossos cursos</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    <p>Nossos cursos são divididos em 3 módulos, basico, intermediario e avançado, cada dia você terá uma apostila, video aula e 
+                    exercicios para te preparar para a prova do dia, após concluir a prova do dia você irá desbloquear o próximo.</p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-12">
                         <ul id="portfolio-flters">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-app">App</li>
-                            <li data-filter=".filter-card">Card</li>
-                            <li data-filter=".filter-web">Web</li>
+                            <li data-filter=".filter-app">Back</li>
+                            <li data-filter=".filter-card">Front</li>
+                            <li data-filter=".filter-web">Banco</li>
                         </ul>
                     </div>
                 </div>
@@ -258,12 +259,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/java.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>App 1</h4>
-                                <p>App</p>
+                                <h4>Java</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/java.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -272,12 +273,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/cpp.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Web 3</h4>
-                                <p>Web</p>
+                                <h4>C++</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/c++.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -286,12 +287,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/javascript.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>App 2</h4>
-                                <p>App</p>
+                                <h4>JavaScript</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/javascript.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -300,12 +301,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/Kotilin.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Card 2</h4>
-                                <p>Card</p>
+                                <h4>Kotilin</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/Kotilin.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -314,12 +315,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/mysql.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Web 2</h4>
-                                <p>Web</p>
+                                <h4>MySql</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/mysql.png" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -328,12 +329,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/nodejs.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>App 3</h4>
-                                <p>App</p>
+                                <h4>NodeJs</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/nodejs.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -342,12 +343,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/oracle.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Card 1</h4>
-                                <p>Card</p>
+                                <h4>Oracle DataBase</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/oracle.png" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -356,12 +357,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/PHP.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Card 3</h4>
-                                <p>Card</p>
+                                <h4>PHP</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/PHP.png" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -370,12 +371,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="~/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                            <img src="~/assets/img/Cursos/python.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Web 3</h4>
-                                <p>Web</p>
+                                <h4>Python</h4>
+                                <p>curso do basico ao avançado</p>
                                 <div class="portfolio-links">
-                                    <a href="~/assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
+                                    <a href="~/assets/img/Cursos/python.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                                 </div>
                             </div>
@@ -453,50 +454,50 @@
             <div class="container">
 
                 <div class="section-title">
-                    <h2>Frequently Asked Questions</h2>
+                    <h2>Perguntas frequentes</h2>
                 </div>
 
                 <div class="row  d-flex align-items-stretch">
 
                     <div class="col-lg-6 faq-item" data-aos="fade-up">
-                        <h4>Non consectetur a erat nam at lectus urna duis?</h4>
+                        <h4>O curso disponibiliza um certificado ao final?</h4>
                         <p>
-                            Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                            Sim. Ao final de cada curso será disponibilizado um certificado no nome do aluno matriculado.
                         </p>
                     </div>
 
                     <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="100">
-                        <h4>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h4>
+                        <h4>Posso cancelar a qualquer momento meu plano?</h4>
                         <p>
-                            Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+                            Sim. Você tem o direito de cancelar a qualquer hora o seu plano e voltar ao plano free.
                         </p>
                     </div>
 
                     <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="200">
-                        <h4>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h4>
+                        <h4>Quais os beneficios do pacote Premium?</h4>
                         <p>
-                            Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.
+                            Com ele você pode acessar todos os módulos dos cursos, além de um histórico detalhado de todos os exercicios realizado por você até aqui.
                         </p>
                     </div>
 
                     <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="300">
-                        <h4>Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h4>
+                        <h4>Há alguma restrição para se obter o diploma?</h4>
                         <p>
-                            Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
+                            Para você receber seu diploma ao final do curso, você deve completar todos os módulos do seu respectivo curso e concluir a prova final com 75% ou mais de aprovação.
                         </p>
                     </div>
 
                     <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="400">
-                        <h4>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h4>
+                        <h4>O que é o 30Code?</h4>
                         <p>
-                            Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                            É uma plataforma EAD que ensina programação e novas tecnologia na area de TI em um periodo de 30 dias, todo o conteudo perfeitamente divido em varios métodos de ensino para todos os gostos.
                         </p>
                     </div>
 
                     <div class="col-lg-6 faq-item" data-aos="fade-up" data-aos-delay="500">
-                        <h4>Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</h4>
+                        <h4>Como faço para realizar os cursos da 30code?</h4>
                         <p>
-                            Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                             Os cursos do conteúdo básico é totalmente de graça e o premiun tem total acesso a todos os módulos, você pode acessar no desktop, mobile e tablet.
                         </p>
                     </div>
 
@@ -509,7 +510,7 @@
             <div class="container">
 
                 <div class="section-title">
-                    <h2>Contact Us</h2>
+                    <h2>Contate-nos</h2>
                 </div>
 
                 <div class="row">
@@ -526,7 +527,7 @@
                         <div class="info-box">
                             <i class="bx bx-envelope"></i>
                             <h3>Contate-nos</h3>
-                            <p>30Code@gmail.com<br>30Code@hotmail.com</p>
+                            <p>30code@gmail.com<br>30code@hotmail.com</p>
                         </div>
                     </div>
 
