--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -110,12 +110,12 @@
                     <div class="row">
 
                         <div class="col-lg-3 col-md-6 footer-info">
-                            <h3>Mamba</h3>
+                            <h3>30Code</h3>
                             <p>
-                                A108 Adam Street <br>
-                                NY 535022, USA<br><br>
-                                <strong>Phone:</strong> +1 5589 55488 55<br>
-                                <strong>Email:</strong> info@example.com<br>
+                                Av. Prof. João Rodrigues, 1501 - Jardim Esperanca<br>
+                                Guaratinguetá - SP 12517-475, BRA<br><br>
+                                <strong>Phone:</strong> +55 (12) 3301 - 0072<br>
+                                <strong>Email:</strong> 30code@hotmail.com<br>
                             </p>
                             <div class="social-links mt-3">
                                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
